--- a/course.yml
+++ b/course.yml
@@ -14,34 +14,15 @@ chunks:
 
     content: |
 
-        # Hi there!
+        # このページでは、中学レベルの数学を学びます。
 
-        Check out the [linear algebra recap](flow:001-linalg-recap). Do it now. Do it.
+        以下のページから学習の為にクイズを受けれます。
 
-        You can also go there using a
-        <a href="flow:001-linalg-recap" role="button" class="btn btn-default">Bootstrap button</a>.
+        [クイズを受ける](flow:quiz-test)
 
-        You can also jump directly to the [sample quiz](flow:quiz-test).
+        [ホームに戻る](127.0.0.1:8000)
 
-        Look at the amazing embedded [PDF](repocur:pdfs/sample.pdf).
-
-        In addition to interactive content, RELATE also supports [static (i.e.
-        non-interactive) pages](staticpage:test).
-
-        Remember, this image shows the model that RELATE is trying to put out
-        of business:
-
-        <img src="repo:images/classroom.jpeg">
-
-        (![creative commons](repo:images/cc.png)/by [kevin dooley](https://secure.flickr.com/photos/pagedooley/13905987989/) on Flickr)
-
-        <div class="well" markdown="1">
-          *RELATE* <i class="fa fa-heart"></i>
-          <a href="https://djangoproject.com/"><img src="repo:images/django-logo.png"></a>.
-
-          (Note that all of this is sample content. RELATE does not clutter
-          your course page with information about itself.)
-        </div>
+        
 
 -
     title: "Exam pointer"
