--- a/flows/quiz-test.yml
+++ b/flows/quiz-test.yml
@@ -16,7 +16,7 @@ title: "中学数学クイズ"
 # So the '#' character below introduces a first-level headline (not a comment).
 description: |
 
-    # RELATE Test Quiz
+    # 中学数学クイズ
 
 rules:
     start:
@@ -33,7 +33,7 @@ rules:
 
     access:
     -
-        message: "中学総合クイズ へ ようこそ"
+        message: "中学数学クイズ へ ようこそ"
         permissions: [view, submit_answer, end_session, see_correctness, see_answer_after_submission]
 
     grade_identifier: la_quiz
@@ -53,7 +53,7 @@ groups:
         id: welcome
         content: |
 
-            # Welcome to the test quiz for RELATE!
+            # 中学数学クイズ
 
             次のページからテストが始まります。
 
